[project]
name = "llm-agent-quality"
version = "0.1.0"
description = "LLM Agent quality metrics — structured recording and quality threshold testing for Function Calling agents"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
