[project]
name = "llm-agent-quality"
version = "0.1.0"
description = "LLM Agent quality metrics — structured recording and quality threshold testing for Function Calling agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/eris-ths/llm-agent-quality"

[project.optional-dependencies]
test = ["pytest>=7.0"]
dev = ["pytest>=7.0", "mypy>=1.0", "ruff>=0.4"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "S", "B", "SIM"]
ignore = ["S101"]  # assert in tests is fine

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
